--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -6,10 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".DisplayData">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/course"
+            />
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/diet"
+            />
+    </LinearLayout>
+
     <ListView
         android:id="@+id/recipesView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5px"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/displayBack"
+            android:id="@+id/backButton"
+            />
+    </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
