--- a/app/src/main/res/layout/recipesrow.xml
+++ b/app/src/main/res/layout/recipesrow.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -9,14 +9,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/rowHeader"
         android:textStyle="bold"
-        android:textSize="6px"
+        android:textSize="20dp"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rowDescription"
-        android:layout_marginStart="5px"
+        android:layout_marginStart="10dp"
         />
 
 </LinearLayout>
