--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -35,15 +35,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        >
 
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/displayBack"
+            android:src="@drawable/backbutton"
             android:id="@+id/backButton"
-            android:gravity="center_horizontal"
-            />
+            >
+
+        </ImageButton>
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
