--- a/app/src/main/res/layout/recipesrow.xml
+++ b/app/src/main/res/layout/recipesrow.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="15.0dp"
+    android:elevation="30.0dp"
+    app:cardBackgroundColor="@color/wheat"
+    >
 
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/rowHeader"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        />
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rowDescription"
-        android:layout_marginStart="10dp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rowHeader"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            />
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rowDescription"
+            android:layout_marginStart="10dp"
+            />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
