--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -5,7 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DisplayData"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/design">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@drawable/food4"/>
 
     <LinearLayout
         android:layout_width="match_parent"
