--- a/app/src/main/res/layout/activity_save_recipe.xml
+++ b/app/src/main/res/layout/activity_save_recipe.xml
@@ -5,7 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SaveRecipe"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/design"
+    android:layoutDirection="ltr">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@drawable/food4"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
