works with menu and base

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,4 +8,6 @@
     android:background="@drawable/design"
     tools:context=".MainActivity">
 
+    <include layout="@layout/activity_base"/>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
