--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -8,10 +8,7 @@
     android:orientation="vertical"
     android:background="@drawable/design">
 
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@drawable/food4"/>
+    <include layout="@layout/activity_base"/>
 
     <LinearLayout
         android:layout_width="match_parent"
