--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -20,11 +20,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/course"
+            android:fontFamily="@font/mighty_brush_demo"
             />
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/diet"
+            android:fontFamily="@font/mighty_brush_demo"
             />
     </LinearLayout>
 
@@ -50,6 +52,20 @@
             >
 
         </ImageButton>
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:layout_alignParentBottom="true" />
+
+        <!--            android:layout_below="@+id/button"-->
+        <!--            android:layout_alignRight="@+id/textView"-->
+        <!--            android:layout_alignEnd="@+id/textView"-->
+        <!--            android:layout_alignLeft="@+id/textview"-->
+        <!--            android:layout_alignStart="@+id/textview"-->
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
