--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -3,9 +3,13 @@
     <item
         android:id="@+id/menu_show"
         android:title="@string/showList"
+        android:icon="@drawable/notebook"
+        android:fontFamily="@font/mighty_brush_demo"
         />
     <item
         android:id="@+id/menu_logoff"
         android:title="@string/logOff"
+        android:icon="@drawable/exit"
+        android:fontFamily="@font/mighty_brush_demo"
         />
 </menu>
