--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:title="@string/language">
+        <menu>
+            <item android:title="@string/english"
+                android:id="@+id/eng"/>
+            <item
+                android:title="@string/hebrew"
+                android:id="@+id/heb"/>
+        </menu>
+    </item>
+    <item
         android:id="@+id/menu_show"
         android:title="@string/showList"
         android:icon="@drawable/notebook"
