--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="wheat">#F8F2D8</color>
+    <color name="gray">#DADDDC</color>
+    <color name="blue">#89F3D4</color>
+    <color name="white">#FBFFFE</color>
+    <color name="blue2">#AAC5FF</color>
 </resources>
