--- a/app/src/main/res/values-iw/styles.xml
+++ b/app/src/main/res/values-iw/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">@font/mighty_brush_demo</item>
+        <item name="android:fontFamily">@font/ganclm_bold_webfont</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
