--- a/app/src/main/res/values-iw/styles.xml
+++ b/app/src/main/res/values-iw/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/ganclm_bold_webfont</item>
+        <item name="android:direction">right_to_left</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
