--- a/app/src/main/res/values-iw/styles.xml
+++ b/app/src/main/res/values-iw/styles.xml
@@ -8,7 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/ganclm_bold_webfont</item>
         <item name="android:direction">right_to_left</item>
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
+
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">@color/white</item>
+    </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
